overflow fix

--- a/src/Menu/Menu.css
+++ b/src/Menu/Menu.css
@@ -49,12 +49,18 @@
   align-items: center;
   gap: 80px;
   margin-bottom: 100px;
+  overflow: hidden;
 }
 .menu-title{
   font-size: 50px;
   font-family: Titan;
   margin-top: 90px;
   margin-bottom: 20px;
+}
+@media screen and (max-width:1100px) {
+  .menu-title{
+    font-size: 40px;
+  }
 }
 .menu-item{
   display: flex;
